# chatvault

./: .gitignore  README.md  pyproject.toml
docs/: examples_aws.md  versioning.md
src/chatvault/: __init__.py  conversation.py  session.py  vault.py
src/chatvault/api/: __init__.py  router.py
src/chatvault/backends/: __init__.py
src/chatvault/backends/files/: __init__.py  base.py  local.py
src/chatvault/backends/messages/: __init__.py  base.py  memory.py
src/chatvault/persistence/: __init__.py  base.py  memory.py  ots.py
src/chatvault/storage/: __init__.py  base.py  local.py  oss.py
src/chatvault/ui/: __init__.py  app.py  chatvault_app.py  config.py  data_layer.py
tests/: test_api.py  test_core.py
