[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chatvault"
version = "0.1.0"
description = "AI conversation & file manager - vault your conversations, unlock your context"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Fei Zhan", email = "enfeizhan@gmail.com" }
]
keywords = ["ai", "llm", "chat", "conversation", "session", "memory", "files", "storage"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = []

[project.optional-dependencies]
fastapi = ["fastapi>=0.100.0", "python-multipart>=0.0.6"]
s3 = ["boto3>=1.28.0"]
oss = ["oss2>=2.18.0"]
postgres = ["asyncpg>=0.28.0", "psycopg>=3.1.0"]
redis = ["redis>=5.0.0"]
ui = ["chainlit>=1.0.0"]
all = ["fastapi>=0.100.0", "python-multipart>=0.0.6", "boto3>=1.28.0", "oss2>=2.18.0", "asyncpg>=0.28.0", "psycopg>=3.1.0", "redis>=5.0.0", "chainlit>=1.0.0"]
dev = ["pytest>=7.0.0", "pytest-asyncio>=0.21.0", "ruff>=0.1.0"]


[project.urls]
Homepage = "https://github.com/enfeizhan/chatvault"
Repository = "https://github.com/enfeizhan/chatvault"
Documentation = "https://github.com/enfeizhan/chatvault#readme"

[tool.hatch.build.targets.wheel]
packages = ["src/chatvault"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
