[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "chatvault"
dynamic = ["version"]
description = "AI conversation & file manager - vault your conversations, unlock your context"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Fei Zhan", email = "enfeizhan@gmail.com" }
]
keywords = ["ai", "llm", "chat", "conversation", "memory", "files", "storage"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = []

[project.optional-dependencies]
fastapi = ["fastapi>=0.100.0", "python-multipart>=0.0.6"]
dev = ["pytest>=7.0.0", "pytest-asyncio>=0.21.0", "ruff>=0.1.0"]


[project.urls]
Homepage = "https://github.com/enfeizhan/chatvault"
Repository = "https://github.com/enfeizhan/chatvault"
Documentation = "https://github.com/enfeizhan/chatvault#readme"

[tool.hatch.build.targets.wheel]
packages = ["src/chatvault"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.version]
source = "vcs"
